<resources>
    <string name="app_name">Brand de</string>
    <string name="_continue">Continue</string>
    <string name="done">Done</string>
    <string name="follow_brand">Follow Brand</string>
    <string name="term">Terms/Policy</string>
    <string name="have_an_acc">Have an accout? Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="coonect_fb">Connect to Facebook</string>
    <string name="follow_what_you">Follow what you want from \n over 1,000 modern fashion \n and lifestyle brands.</string>
    <string name="create_an_acc">Create An Account</string>
    <string name="retry">Retry</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="forgot_password">Forget Password ?</string>
    <string name="skip_and_continue">Skip and Continue</string>
    <string name="skip">Skip</string>
    <string name="have_to_follow">You have to follow at least 5 brands</string>
    <string name="loading">Loading...</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="home">Home</string>
    <string name="discovery">Discovery</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="feedback">Feedback</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="terms">Terms of Service</string>
    <string name="privacy">Privacy Policy</string>
    <string name="search">Search</string>
    <string name="fb_login_protocol_scheme">1111584132259870</string>
    <string name="check_connection">Please check your internet \n Connection</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="sure">Sure</string>
    <string name="tell_your_interest">Tell Your Interests</string>
    <string name="choose_at_least">Choose at least 5 so we can create the best experience possible.</string>
</resources>
