<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.kepler.brandde.HomeActivity">
    <!-- The first child in the layout is for the main Activity UI-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/action_bar" />

        <FrameLayout
            android:id="@+id/home_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>
    </LinearLayout>

    <!-- Side navigation drawer UI -->

    <ScrollView
        android:id="@+id/navHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.kepler.brandde.support.CustomTextView
                style="@style/TextStyle_Dark_SMALL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/default_selector_light"
                android:clickable="true"
                android:drawableLeft="@drawable/home"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/home" />

            <com.kepler.brandde.support.CustomTextView
                style="@style/TextStyle_Dark_SMALL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/default_selector_light"
                android:clickable="true"
                android:drawableLeft="@drawable/search"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/discovery" />

            <com.kepler.brandde.support.CustomTextView
                style="@style/TextStyle_Dark_SMALL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/default_selector_light"
                android:clickable="true"
                android:drawableLeft="@drawable/activity"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/activity" />

            <com.kepler.brandde.support.CustomTextView
                style="@style/TextStyle_Dark_SMALL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/default_selector_light"
                android:clickable="true"
                android:drawableLeft="@drawable/profile"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/profile" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" />

            <com.kepler.brandde.support.CustomTextView
                style="@style/TextStyle_Dark_SMALL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/default_selector_light"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/following" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" />

            <com.kepler.brandde.support.CustomTextView
                style="@style/TextStyle_Dark_SMALL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/default_selector_light"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/feedback"
                android:textColor="@color/cloud_color" />

            <com.kepler.brandde.support.CustomTextView
                style="@style/TextStyle_Dark_SMALL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/default_selector_light"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/rate_our_app"
                android:textColor="@color/cloud_color" />

            <com.kepler.brandde.support.CustomTextView
                style="@style/TextStyle_Dark_SMALL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/default_selector_light"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/terms"
                android:textColor="@color/cloud_color" />

            <com.kepler.brandde.support.CustomTextView
                style="@style/TextStyle_Dark_SMALL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/default_selector_light"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/privacy"
                android:textColor="@color/cloud_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" />

            <com.kepler.brandde.support.CustomTextView
                style="@style/TextStyle_Dark_SMALL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/default_selector_light"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/login"
                android:textColor="@color/cloud_color" />
        </LinearLayout>

    </ScrollView>


</android.support.v4.widget.DrawerLayout>

